[gd_scene load_steps=12 format=3 uid="uid://docjuqbf1ueu1"]

[ext_resource type="Script" path="res://combat/fire_component.gd" id="1_mu2nf"]
[ext_resource type="PackedScene" uid="uid://c288bwefp07f0" path="res://sfx/random_audio_player.tscn" id="2_mdcly"]
[ext_resource type="AudioStream" uid="uid://didwhsv2agpf3" path="res://assets/audio/sfx/kenney_impact-sounds/Audio/impactWood_medium_000.ogg" id="3_k7kg6"]
[ext_resource type="AudioStream" uid="uid://df0sa073bwymr" path="res://assets/audio/sfx/kenney_impact-sounds/Audio/impactWood_medium_001.ogg" id="4_15wt3"]
[ext_resource type="AudioStream" uid="uid://cy7kwebhcslte" path="res://assets/audio/sfx/kenney_impact-sounds/Audio/impactWood_medium_002.ogg" id="5_y3pm3"]
[ext_resource type="AudioStream" uid="uid://cw0ctx4g0h0lx" path="res://assets/audio/sfx/kenney_impact-sounds/Audio/impactWood_medium_003.ogg" id="6_kit7u"]
[ext_resource type="AudioStream" uid="uid://cwsqi765tnpd2" path="res://assets/audio/sfx/kenney_impact-sounds/Audio/impactWood_medium_004.ogg" id="7_8ec7j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n0uew"]
size = Vector2(160, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_36jvi"]
size = Vector2(32, 32)

[sub_resource type="Gradient" id="Gradient_dgto8"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.745098, 0.921569, 0.443137, 0.501961)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pgct4"]
gradient = SubResource("Gradient_dgto8")
width = 160
height = 160

[node name="FireComponent" type="Node2D"]
script = ExtResource("1_mu2nf")

[node name="DamageTimer" type="Timer" parent="."]

[node name="FireArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="FireArea"]
shape = SubResource("RectangleShape2D_n0uew")

[node name="ReceiveFire" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ReceiveFire"]
shape = SubResource("RectangleShape2D_36jvi")

[node name="FireIndicator" type="Sprite2D" parent="."]
z_index = 1
texture = SubResource("GradientTexture2D_pgct4")

[node name="DamageAudioPlayer" parent="." instance=ExtResource("2_mdcly")]
streams = Array[AudioStream]([ExtResource("3_k7kg6"), ExtResource("4_15wt3"), ExtResource("5_y3pm3"), ExtResource("6_kit7u"), ExtResource("7_8ec7j")])
